Fix container spacing issue
The inner content container is now having the right
padding.

--- a/src/components/pages/HomePage/HomePage.scss
+++ b/src/components/pages/HomePage/HomePage.scss
@@ -5,6 +5,9 @@ body {
 .main-container{
   transition: all .15s ease;
 }
+.container-fluid{
+  padding: 15px 15px 15px 20px;
+}
 /** 
  * SPDX-License-Identifier: (EUPL-1.2)
  * Copyright © 2019 Werbeagentur Christian Aichner
